--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,24 +10,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SESCIP_Vistorias">
 
-        <activity android:name=".Consulta_Rapida_Detalhes"
+        <activity android:name=".resultados.Consulta_Rapida_NT"
             android:label="Detalhes"
-            android:parentActivityName=".Controle_Resultado">
+            android:launchMode="singleTop"
+            android:parentActivityName=".resultados.Consulta_Rapida_Detalhes">
         </activity>
-        <activity android:name=".VistoriaInteligente_Resultado_Detalhes"
+        <activity android:name=".resultados.Consulta_Rapida_Detalhes"
+            android:label="Consulta Rápida"
+            android:launchMode="singleTop"
+            android:parentActivityName=".principal.vistoria.Consulta_rapida">
+        </activity>
+        <activity android:name=".resultados.Bizus_NT"
+            android:label="Norma Técnica"
+            android:launchMode="singleTop"
+            android:parentActivityName=".resultados.VistoriaInteligente_Resultado_Detalhes">
+        </activity>
+        <activity android:name=".resultados.VistoriaInteligente_Resultado_Detalhes"
             android:label="Detalhes"
-            android:parentActivityName=".VistoriaInteligente_Resultado">
+            android:launchMode="singleTop"
+            android:parentActivityName=".resultados.VistoriaInteligente_Resultado">
         </activity>
-        <activity android:name=".VistoriaInteligente_Resultado"
+        <activity android:name=".resultados.VistoriaInteligente_Resultado"
             android:label="Resultado Vistoria Inteligente"
             android:launchMode="singleTop"
-            android:parentActivityName=".Controle_Resultado">
+            android:parentActivityName=".resultados.Controle_Resultado">
         </activity>
         <activity
             android:name=".criterios.Prisoes"
             android:label="Prisões"
             android:parentActivityName=".criterios.Altura" />
-        <activity android:name=".principal.cert_previa2" />
+        <activity android:name=".principal.vistoria.cert_previa2" />
         <activity
             android:name=".criterios.Publico"
             android:label="Público"
@@ -47,16 +59,16 @@
         <activity
             android:name=".criterios.LiquidosM2"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".criterios.Tunel_M1"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
-            android:name=".Controle_Resultado"
+            android:name=".resultados.Controle_Resultado"
             android:label="Vistoria Inteligente"
             android:launchMode="singleTop"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".criterios.Pavimentos"
             android:label="Vistoria Inteligente"
@@ -68,55 +80,55 @@
         <activity
             android:name=".divisoes.DivisaoN"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoM"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoL"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoJ"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoI"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoH"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoG"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoF"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoE"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoD"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoC"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoB"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".divisoes.DivisaoA"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
             android:name=".criterios.Altura"
             android:label="Vistoria Inteligente"
@@ -124,28 +136,37 @@
         <activity
             android:name=".criterios.Area"
             android:label="Vistoria Inteligente"
-            android:parentActivityName=".principal.VistoriaInteligente" />
+            android:parentActivityName=".principal.vistoria.VistoriaInteligente" />
         <activity
-            android:name=".principal.PassoApasso"
+            android:name=".principal.vistoria.CertiPreviaPassoApasso"
             android:label="Passo-a-Passo"
             android:parentActivityName=".principal.Vistorias" />
         <activity
-            android:name=".principal.Cert_Previa"
+            android:name=".principal.vistoria.Cert_Previa"
             android:label="Certificação Prévia"
             android:parentActivityName=".principal.Vistorias" />
         <activity
-            android:name=".principal.Consulta_rapida"
+            android:name=".principal.vistoria.Consulta_rapida"
             android:label="Consulta Rapida"
+            android:launchMode="singleTop"
             android:parentActivityName=".principal.Vistorias" />
         <activity
-            android:name=".principal.VistoriaInteligente"
+            android:name=".principal.vistoria.VistoriaPassoApasso.VistoriaPassoApasso"
+            android:label="Passo-a-Passo"
+            android:parentActivityName=".principal.Vistorias" />
+        <activity
+            android:name=".principal.vistoria.VistoriaPassoApasso.VistoriaPassoApasso_Result"
+            android:label="Passo-a-Passo"
+            android:parentActivityName=".principal.vistoria.VistoriaPassoApasso.VistoriaPassoApasso" />
+        <activity
+            android:name=".principal.vistoria.VistoriaInteligente"
             android:label="Vistoria Inteligente"
             android:parentActivityName=".principal.Vistorias" />
         <activity
             android:name=".principal.Vistorias"
             android:label="Vistorias"
-            android:parentActivityName=".principal.MainActivity" />
-        <activity android:name=".principal.MainActivity">
+            android:parentActivityName=".principal.vistoria.MainActivity" />
+        <activity android:name=".principal.vistoria.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
