--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,61 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        // maven { url "https://maven.fabric.io/public" }
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url "https://raw.github.com/Raizlabs/maven-releases/master/releases"
+        }
+        maven {
+            url "http://oss.sonatype.org/content/repositories/snapshots"
+            allowInsecureProtocol = true //add this line
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        maven {
+            url "https://maven.google.com"
+        }
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:7.0.1'
+        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
+        // maven { url "https://maven.fabric.io/public" }
+        maven {
+            url "https://jitpack.io"
+        }
+        maven {
+            url "https://raw.github.com/Raizlabs/maven-releases/master/releases"
+        }
+        maven {
+            url "http://oss.sonatype.org/content/repositories/snapshots"
+            allowInsecureProtocol = true //add this line
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        maven {
+            url "https://maven.google.com"
+        }
         google()
+        mavenCentral()
         jcenter()
     }
 }
