--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.stone4" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/vistoria"
@@ -10,6 +13,11 @@
         android:roundIcon="@drawable/vistoria"
         android:supportsRtl="true"
         android:theme="@style/Theme.SESCIP_Vistorias" >
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6018756003845465/2294999075"/>
+
         <activity
             android:name=".resultados.Consulta_Rapida_NT"
             android:label="Detalhes"
