--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
     defaultConfig {
         applicationId "com.vistoria.vistoriaFacil_v2"
-        minSdkVersion 19
+        minSdkVersion 20
         targetSdkVersion 31
-        versionCode 8
-        versionName "1.6"
+        versionCode 16
+        versionName "1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'eu.dkaratzas:android-inapp-update:1.0.5'
+    implementation 'com.google.android.play:core:1.10.2'
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
